// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileModelCounter can export counters 1`] = `
Object {
  "curved-tile-1": 2,
  "curved-tile-enlarged-1": 1,
  "straight-tile-1": 3,
}
`;

exports[`TileModelCounter can get the tile model for a given key 1`] = `
StraightTileModel {
  "direction": "right",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
}
`;

exports[`TileModelCounter can get the tile model for a given key 2`] = `
CurvedTileEnlargedModel {
  "direction": "right",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
}
`;

exports[`TileModelCounter can get the tile model for a given key 3`] = `
CurvedTileModel {
  "direction": "right",
  "id": "curved-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
  },
}
`;

exports[`TileModelCounter can list the counted tile models 1`] = `
Array [
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
]
`;

exports[`TileModelCounter can map its counters 1`] = `
Object {
  "curved-tile-1": 20,
  "curved-tile-enlarged-1": 10,
  "straight-tile-1": 30,
}
`;

exports[`TileModelCounter can notify changes applied to the counters 1`] = `
Map {
  "straight-tile-1" => 3,
  "curved-tile-enlarged-1" => 1,
  "curved-tile-1" => 2,
}
`;

exports[`TileModelCounter can notify changes applied to the counters 2`] = `
Map {
  "straight-tile-1" => 3,
  "curved-tile-enlarged-1" => 1,
  "curved-tile-1" => 2,
}
`;

exports[`TileModelCounter can notify changes applied to the counters 3`] = `
Map {
  "straight-tile-1" => 3,
  "curved-tile-enlarged-1" => 1,
  "curved-tile-1" => 2,
}
`;

exports[`TileModelCounter can notify changes applied to the counters 4`] = `
Map {
  "straight-tile-1" => 3,
  "curved-tile-1" => 2,
}
`;

exports[`TileModelCounter can notify changes applied to the counters 5`] = `
Map {
  "straight-tile-1" => 3,
  "curved-tile-1" => 2,
  "curved-tile-enlarged-1" => 1,
}
`;

exports[`TileModelCounter can notify changes applied to the counters 6`] = `
Map {
  "straight-tile-1" => 3,
  "curved-tile-1" => 2,
  "curved-tile-enlarged-1" => 0,
}
`;

exports[`TileModelCounter can notify changes applied to the counters 7`] = `Map {}`;

exports[`TileModelCounter can notify changes applied to the list of tile models 1`] = `
Array [
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
]
`;

exports[`TileModelCounter can notify changes applied to the list of tile models 2`] = `
Array [
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
]
`;

exports[`TileModelCounter can notify changes applied to the list of tile models 3`] = `
Array [
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
]
`;

exports[`TileModelCounter can notify changes applied to the list of tile models 4`] = `
Array [
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
]
`;

exports[`TileModelCounter can notify changes applied to the list of tile models 5`] = `
Array [
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
    },
  },
]
`;

exports[`TileModelCounter can notify changes applied to the list of tile models 6`] = `Array []`;

exports[`TileModelCounter emits an event when setting a counter 1`] = `
Array [
  "straight-tile-1",
  3,
  3,
]
`;

exports[`TileModelCounter emits an event when setting a counter 2`] = `
Array [
  "curved-tile-enlarged-1",
  4,
  1,
]
`;

exports[`TileModelCounter emits an event when setting a counter 3`] = `
Array [
  "curved-tile-1",
  5,
  2,
]
`;
